--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,17 @@
 body {
   width: 200px;
   height: 300px;
+  
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: -webkit-flex;
+}
+
+#video {
+  border: 1px solid #e2e2e2;
 }
 
 #title {
