--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -479,9 +479,10 @@ hr {
 }
 
 .nav-item {
+  margin-left: 20px;
   padding-top: 25px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
   cursor: pointer;
   list-style-type: none;
   list-style: none;
